@@ -552,6 +552,8 @@ void perl_startup (server_rec *s, pool *p)
 
     status = perl_run(perl);
 
+    TAINT_NOT; /* At this time all is safe */
+
     av_push(GvAV(incgv), newSVpv(server_root_relative(p,""),0));
     av_push(GvAV(incgv), newSVpv(server_root_relative(p,"lib/perl"),0));
 
